<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/menu_productos"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="25dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/borde_redondo_boton"
            android:gravity="center"
            android:textColor="@android:color/white">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/menu" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="235dp"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:gravity="bottom|right"
            android:orientation="vertical">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/productoo" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:gravity="bottom|right"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/regresar_productos"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:background="@drawable/circulo_menu"
                android:gravity="center"
                android:textColor="@android:color/white">

                <ImageButton
                    android:id="@+id/btnRegresar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/regresar"

                />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/editText_consultar_producto"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/boton_gestiones"
        android:gravity="center_vertical"
        android:orientation="horizontal">

    </EditText>

    <ImageButton
        android:id="@+id/btnBuscar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="centerCrop"
        android:src="@drawable/lupa" />


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/boton_gestiones"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:layout_marginLeft="15dp"
            android:src="@drawable/bonyurt" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="Lacteos y Yogurts"
            android:textColor="#000000"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/boton_gestiones"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:layout_marginLeft="10dp"
            android:src="@drawable/cocacola" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="Bebidas"
            android:textColor="#000000"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/boton_gestiones"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:layout_marginLeft="15dp"
            android:src="@drawable/galletasfestival" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="Galletas y Snacks"
            android:textColor="#000000"
            android:textSize="20sp"
            />
    </LinearLayout>

</LinearLayout>