...
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/menu_dashboard"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="25dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/borde_redondo_boton"
...
            android:background="@drawable/boton_redondo_opciones"
            android:layout_marginLeft="125dp"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <ImageButton
                android:id="@+id/buscarbtn"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerCrop"
                android:src="@drawable/luna2" />

...
