...
        android:gravity="center"
        android:text="Nombre del producto:*"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextNombre_editar"
        android:layout_width="320dp"
        android:layout_height="36dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/boton_gestiones"
        android:gravity="center_vertical"
...
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/btneditar_producto"
        android:onClick="editar_producto"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:layout_width="150dp"
        android:layout_height="48dp"
...
