...
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Aquí se añadirán dinámicamente los botones de los productos -->
        <LinearLayout
            android:id="@+id/linearLayoutResultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
        </LinearLayout>

...
